updated swagger.yaml(swap oauth with api_key, refactor some code)
