# swagger_server/swagger/swagger.yaml
@@ -1,17 +1,12 @@
 openapi: 3.0.3
 info:
-  title: Swagger Petstore - OpenAPI 3.0
+  title: Task manager- OpenAPI 3.0
   description: |-
-    This is a sample Pet Store Server based on the OpenAPI 3.0 specification.  You can find out more about
-    Swagger at [https://swagger.io](https://swagger.io). In the third iteration of the pet store, we've switched to the design first approach!
-    You can now help us improve the API whether it's by making changes to the definition itself or to the code.
-    That way, with time, we can improve the API in general, and expose some of the new features in OAS3.
-
-    _If you're looking for the Swagger 2.0/OAS 2.0 version of Petstore, then click [here](https://editor.swagger.io/?url=https://petstore.swagger.io/v2/swagger.yaml). Alternatively, you can load via the `Edit > Load Petstore OAS 2.0` menu option!_
+    Simple task manager
 
     Some useful links:
-    - [The Pet Store repository](https://github.com/swagger-api/swagger-petstore)
-    - [The source API definition for the Pet Store](https://github.com/swagger-api/swagger-petstore/blob/master/src/main/resources/openapi.yaml)
+    - [The task Store repository](https://github.com/swagger-api/swagger-petstore)
+    - [The source API definition for the task Store](https://github.com/swagger-api/swagger-petstore/blob/master/src/main/resources/openapi.yaml)
   termsOfService: http://swagger.io/terms/
   contact:
     email: apiteam@swagger.io
@@ -25,16 +20,8 @@ externalDocs:
 servers:
 - url: https://petstore3.swagger.io/api/v3
 tags:
-- name: pet
-  description: Everything about your Pets
-  externalDocs:
-    description: Find out more
-    url: http://swagger.io
-- name: store
-  description: Access to Petstore orders
-  externalDocs:
-    description: Find out more about our store
-    url: http://swagger.io
+- name: task
+  description: Operation with task
 - name: user
   description: Operations about user
 paths:
@@ -73,7 +60,7 @@ paths:
         "422":
           description: Validation exception
       security:
-      - tasks_auth:
+      - api_key:
         - write:tasks
         - read:tasks
       x-openapi-router-controller: swagger_server.controllers.task_controller
@@ -115,7 +102,7 @@ paths:
         "400":
           description: Invalid status value
       security:
-      - tasks_auth:
+      - api_key:
         - write:tasks
         - read:tasks
       x-openapi-router-controller: swagger_server.controllers.task_controller
@@ -152,7 +139,7 @@ paths:
           description: Task not found
       security:
       - api_key: []
-      - tasks_auth:
+      - api_key:
         - write:tasks
         - read:tasks
       x-openapi-router-controller: swagger_server.controllers.task_controller
@@ -182,7 +169,7 @@ paths:
         "400":
           description: Invalid input
       security:
-      - tasks_auth:
+      - api_key:
         - write:tasks
         - read:tasks
       x-openapi-router-controller: swagger_server.controllers.task_controller
@@ -193,14 +180,6 @@ paths:
       description: delete a task
       operationId: delete_task
       parameters:
-      - name: api_key
-        in: header
-        description: ""
-        required: false
-        style: simple
-        explode: false
-        schema:
-          type: string
       - name: taskId
         in: path
         description: Task id to delete
@@ -212,9 +191,9 @@ paths:
           format: int64
       responses:
         "400":
-          description: Invalid pet value
+          description: Invalid task value
       security:
-      - tasks_auth:
+      - api_key:
         - write:tasks
         - read:tasks
       x-openapi-router-controller: swagger_server.controllers.task_controller
@@ -256,7 +235,7 @@ paths:
           description: Task not found
       security:
       - api_key: []
-      - tasks_auth:
+      - api_key:
         - write:tasks
         - read:tasks
       x-openapi-router-controller: swagger_server.controllers.task_controller
@@ -298,7 +277,7 @@ paths:
           description: Task not found
       security:
       - api_key: []
-      - tasks_auth:
+      - api_key:
         - write:tasks
         - read:tasks
       x-openapi-router-controller: swagger_server.controllers.task_controller
@@ -340,7 +319,7 @@ paths:
         "422":
           description: Validation exception
       security:
-      - tasks_auth:
+      - api_key:
         - write:tasks
         - read:tasks
       x-openapi-router-controller: swagger_server.controllers.task_controller
@@ -378,7 +357,7 @@ paths:
         "422":
           description: Validation exception
       security:
-      - tasks_auth:
+      - api_key:
         - write:tasks
         - read:tasks
       x-openapi-router-controller: swagger_server.controllers.task_controller
@@ -640,16 +619,6 @@ components:
             items:
               $ref: '#/components/schemas/User'
   securitySchemes:
-    tasks_auth:
-      type: oauth2
-      flows:
-        implicit:
-          authorizationUrl: https://petstore3.swagger.io/oauth/authorize
-          scopes:
-            write:tasks: modify tasks in your account
-            read:tasks: read your  tasks
-      x-tokenInfoFunc: swagger_server.controllers.authorization_controller.check_tasks_auth
-      x-scopeValidateFunc: swagger_server.controllers.authorization_controller.validate_scope_tasks_auth
     api_key:
       type: apiKey
       name: api_key
